--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicons/apple-touch-icon-152x152.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
